Updated Names of Windows within Xcode. Forced ‘Commit Game’ button to become un-clickable while the game is running. Added an alert window if game ends in Regulation Time or Sudden Death with a zero score/no snitch catch.

--- a/Snitchy Tools/Base.lproj/MainMenu.xib
+++ b/Snitchy Tools/Base.lproj/MainMenu.xib
@@ -501,7 +501,7 @@
                 </subviews>
             </view>
         </window>
-        <window title="Bracket" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" oneShot="NO" releasedWhenClosed="NO" showsToolbarButton="NO" visibleAtLaunch="NO" animationBehavior="default" id="9uF-4p-dRK" userLabel="Bracket">
+        <window identifier="Bracket" title="Bracket" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" oneShot="NO" releasedWhenClosed="NO" showsToolbarButton="NO" visibleAtLaunch="NO" animationBehavior="default" id="9uF-4p-dRK" userLabel="Bracket">
             <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
             <rect key="contentRect" x="196" y="207" width="1017" height="654"/>
@@ -593,7 +593,7 @@
                 </subviews>
             </view>
         </window>
-        <window title="Staff" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" oneShot="NO" releasedWhenClosed="NO" showsToolbarButton="NO" visibleAtLaunch="NO" animationBehavior="default" id="I86-mc-Rjy" userLabel="Staff">
+        <window identifier="Staff" title="Staff" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" oneShot="NO" releasedWhenClosed="NO" showsToolbarButton="NO" visibleAtLaunch="NO" animationBehavior="default" id="I86-mc-Rjy" userLabel="Staff">
             <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
             <rect key="contentRect" x="196" y="207" width="618" height="512"/>
@@ -1413,7 +1413,7 @@
                 </subviews>
             </view>
         </window>
-        <window title="Snitchkeeper Help" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" oneShot="NO" releasedWhenClosed="NO" showsToolbarButton="NO" visibleAtLaunch="NO" animationBehavior="default" id="JDz-O0-3u2" userLabel="Snitchkeeper Help" customClass="NSPanel">
+        <window identifier="Help" title="Snitchkeeper Help" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" oneShot="NO" releasedWhenClosed="NO" showsToolbarButton="NO" visibleAtLaunch="NO" animationBehavior="default" id="JDz-O0-3u2" userLabel="Snitchkeeper Help" customClass="NSPanel">
             <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES" utility="YES" HUD="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
             <rect key="contentRect" x="136" y="163" width="544" height="691"/>
